# netFound

./: .gitignore  Dockerfile  check_labels.py
attack_scripts/: CMakeLists.txt  batch_remove_first_packet_iscvpn2016.sh  batch_substitute_iscvpn2016.sh  build.sh  remove_first_packet.cpp  substitute_flow_headers  substitute_flow_headers.cpp
configs/: CICIoT2023FinetuningConfig.json  ISCXVPNFinetuningConfig.json  TestFinetuningConfig.json
scripts/: evaluate-ISCXVPN.sh  finetune-ISCXVPN.sh  finetune-debug.sh  finetune-test.sh  preprocess_data.py
src/pre_process/: 1_filter.sh  2_split_connection  2_split_connection.sh  PYTHON_README.md  Tokenize.py  build.sh  python_1_filter.sh  python_2_pcap_splitting.sh  python_3_extract_fields.sh  python_preprocess.py  requirements.txt
src/pre_process/packets_processing_src/: CMakeLists.txt
src/pre_process/packets_processing_src/1_filter/: 1_filter.cpp
src/pre_process/packets_processing_src/2_split_connection/: 2_split_connection.cpp
src/pre_process/packets_processing_src/3_field_extraction/: 3_field_extraction.cpp
src/train/: NetfoundEvaluate.py  NetfoundFinetuning.py  NetfoundTokenizer.py  utils.py
